doc update api successfully written
